[package]
name = "use-optics"
description = "Optics primitives for spectra, wavelengths, and visible-light boundaries."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-optics"
keywords = ["optics", "wavelength", "spectrum", "rustuse"]
categories = ["science"]

[lints]
workspace = true
